--- a/Frontend-Test/src/App.css
+++ b/Frontend-Test/src/App.css
@@ -35,26 +35,37 @@ body {
 }
 
 .search-container {
-  flex: 1; 
+  flex: 1;
   display: flex;
-  justify-content: flex-end;
-  align-items: center;
-  gap: 10px; 
-}
+  margin-right: 125px;
+  max-width: 300px; 
+  padding: 1px 1px; /* Padding alrededor del contenedor */
+  background-color: rgba(255, 255, 255, 0.1); /* Fondo ligeramente opaco */
+  border-radius: 30px; /* Ajusta según tus necesidades */
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1); /* Sombra suave para dar efecto elevado */
+  transition: box-shadow 0.3s ease; 
 
+
+}
 .search-input {
-  background-color: transparent;
-  border: 1px solid #a1a1a1;
-  padding: 10px;
-  border-radius: 5px;
-  color: #FFF;
-  flex: 1; 
+  background-color: transparent; /* Fondo ligeramente opaco */
+  border: none;
+  padding: 10px 15px; /* Ajusta el padding para tener un poco más de espacio a los lados */
+  border-radius: 50px;
+  color: #bf9acf;
+  flex: 1;
+  font-size: 16px; /* Ajuste de tamaño de fuente */
+  outline: none;
+  border-radius: 25px;
 }
 
 .search-icon, .cancel-icon {
   cursor: pointer;
+  align-self: center; 
+  width: 20px; 
+  height: 20px; 
+  margin: 0 10px; 
 }
-
 .hero-row {
   display: flex;
   flex-wrap: wrap;
@@ -71,7 +82,8 @@ body {
   position: relative;
   display: flex;
   align-items: center;
-  padding: 30px;
+  padding: 15px;
+  height: 180px;
   border-radius: 15px;
   overflow: hidden;
   min-height: 15px;
@@ -95,8 +107,6 @@ body {
 }
 
 .hero-image {
-  width: 100%;
-  height: 100%;
   width: 200px;
   height: 100px;
   border-radius: 15px;
@@ -104,12 +114,12 @@ body {
   margin-right: 0px; 
   z-index: 1;
   top: 50%;
-  left: 0;
   transform: translateY(-2%);
   transform: translateX(-25%);
 }
 
 .hero-details {
+  height: 80px;
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -135,10 +145,8 @@ body {
 .hero-title {
   width: 100%;
   font-weight: bolder;
-  text-align: left;
-  margin-left: 8px;
+  margin-left: 85px;
   font-size: 1.4rem;
   color: #FFF;
   margin-bottom: 10px;
-  margin-left: 7%;
 }
