--- a/Frontend-Test/src/App.css
+++ b/Frontend-Test/src/App.css
@@ -113,8 +113,9 @@ body {
 
 /* === HERO ITEM STYLING === */
 .hero-item {
-  margin: 8px;
-  width: calc(20% - 40px);
+  margin-left: 50px;
+  margin-top: 25px;
+  width: 900;
 }
 
 .hero-box {
@@ -432,4 +433,46 @@ body {
   border-radius: 3px;
   font-size: 0.5rem;
   z-index: 15;
+}
+
+/* === MEDIA QUERIES FOR RESPONSIVENESS === */
+@media only screen and (max-width: 1200px) {
+  .hero-title {
+      font-size: 1.2rem;
+      margin-left: 50px;
+  }
+
+  .search-container {
+      margin-right: 70px;
+      max-width: 250px;
+  }
+}
+
+@media only screen and (max-width: 768px) {
+  .logo {
+      width: 40px;
+      top: 3%;
+  }
+
+  .hero-title {
+      font-size: 1rem;
+      margin-left: 30px;
+  }
+
+  .search-container {
+      margin-right: 50px;
+      max-width: 200px;
+  }
+}
+
+@media only screen and (max-width: 480px) {
+  .hero-title {
+      font-size: 0.8rem;
+      margin-left: 20px;
+  }
+
+  .search-container {
+      margin-right: 30px;
+      max-width: 150px;
+  }
 }
