--- a/Frontend-Test/src/App.css
+++ b/Frontend-Test/src/App.css
@@ -175,6 +175,7 @@ body {
   width: 100%;
   display: -webkit-box;
   -webkit-line-clamp: 2;
+  line-clamp: 2;
   -webkit-box-orient: vertical;
 }
 
